add: categories in draft release note.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -20,3 +20,14 @@ autolabeler:
   - label: 'feature'
     branch:
       - '/feature\/.+/'
+
+categories:
+  - title: '🚀 Features'
+    label: 'feature'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: 'Document'
+    label: 'chore'
